Fix update button text overlapping in settings update forms and deletion prohibited warning styles
Text overlapping occurring in update forms update button in settings page and the deletion prohibited warning didn't showed up with rounder corners, to solve this issue we:
    - Changed the update button text from 'update *category*' to just update
    - Added a border radius to the error-response class

--- a/Sealena/settings/static/settings/css/settings.css
+++ b/Sealena/settings/static/settings/css/settings.css
@@ -402,6 +402,7 @@
 .error-response{
     width: 30%;
     height: 12%;
+    border-radius: 20px;
     text-align: center;
     padding: 20px;
     position: absolute;
